# games

.github/workflows/: deploy-platformer.yml
breakout/: Cargo.toml  webassembly.md
breakout/html/: .gitignore  index.html
breakout/src/: tutorial.rs
nexnex/: Cargo.toml
nexnex/assets/: Typical_2D_platformer_example.ldtk  nexnex.ldtk
nexnex/old_src/: components.rs  systems.rs
nexnex/src/: camera.rs  climbing.rs  game_flow.rs  inventory.rs  main.rs  player.rs  walls.rs
platformer_js/: .eslintignore  .eslintrc.json  .gitignore  .huskyrc.json  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  README.md  game.js  index.html  jsdoc.json  newgame.html  package-lock.json  package.json  styles.css  vite.config.js
platformer_js/.github/workflows/: deploy.yml
platformer_js/.husky/: pre-commit  pre-push
platformer_js/assets/sprites/: boss_kobra_64x96.json
platformer_js/docs/: index.html
platformer_js/legacy/: game.js
platformer_js/src/: Game.js  main.js
platformer_js/src/entities/: Boss.js  BossProjectile.js  Enemy.js  Player.js  Projectile.js
platformer_js/src/objects/: Coin.js  Platform.js  Portal.js
platformer_js/src/rendering/: Renderer.js
platformer_js/src/systems/: Camera.js  CollisionSystem.js  InputManager.js  SpriteLoader.js
platformer_js/src/utils/: constants.js
platformer_js/tests/: Boss.test.js  BossProjectile.test.js  PlatformerGame.test.js  Portal.test.js  animation.test.js  gameHelpers.test.js  inputManager.test.js  setup.js
