[package]
name = "nexnex"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_sprite",
    "bevy_winit",
    "bevy_core_pipeline",
    "png",
] }
bevy_ecs_ldtk =  { git = "https://github.com/Trouv/bevy_ecs_ldtk" }
bevy_rapier2d = "*"
